# MafiaDiscordRpc

./: .gitignore  CMakeLists.txt  MafiaRpc.sln  README.md
MafiaRpc/: MafiaRpc.vcxproj  MafiaRpc.vcxproj.filters
MafiaRpc/src/: GetMiseNames.cpp  GetMiseNames.hpp  Helper.cpp  Helper.hpp  Log.cpp  Log.hpp  Mafia.cpp  Mafia.hpp  main.cpp  main.hpp
src/: Discord.cpp  Discord.hpp  GetMiseNames.cpp  GetMiseNames.hpp  Helper.cpp  Helper.hpp  Helpers.cpp  Helpers.hpp  Hooks.cpp  Hooks.hpp  Mafia.cpp  Mafia.hpp  main.cpp  main.hpp
src/DiscordSDK/src/: dllmain.cpp
